fix overlap on navbar toggle

--- a/static/core/css/style.css
+++ b/static/core/css/style.css
@@ -9,24 +9,26 @@ html, body {
 
 /* hamburger icon */
 .menu-btn {
-    position: relative;
+    position: absolute;
     color: rgb(0, 0, 0);
     font-size: 35px;
     cursor: pointer;
+    top: 30px;
+    left: 30px;
 }
 
 /* sidebar content */
 .side-bar {
     background: #1b1a1b;
-    backdrop-filter: blur(15px);
     width: 250px;
     height: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: -250px;
     overflow-y: auto;
     transition: 0.6s ease;
     transition-property: left;
+    z-index: 999;
 }
 
 .side-bar::-webkit-scrollbar {
